# $Id: Makefile.am,v 1.31 2008/12/26 07:46:45 bagder Exp $

EXTRA_DIST = template.3

dist_man_MANS = \
	libssh2_banner_set.3 \
	libssh2_channel_close.3 \
	libssh2_channel_direct_tcpip_ex.3 \
	libssh2_channel_eof.3 \
	libssh2_channel_flush_ex.3 \
	libssh2_channel_forward_accept.3 \
	libssh2_channel_forward_cancel.3 \
	libssh2_channel_forward_listen_ex.3 \
	libssh2_channel_free.3 \
	libssh2_channel_get_exit_status.3 \
	libssh2_channel_handle_extended_data.3 \
	libssh2_channel_handle_extended_data2.3 \
	libssh2_channel_open_ex.3 \
	libssh2_channel_process_startup.3 \
	libssh2_channel_read_ex.3 \
	libssh2_channel_request_pty_ex.3 \
	libssh2_channel_send_eof.3 \
	libssh2_channel_set_blocking.3 \
	libssh2_channel_setenv_ex.3 \
	libssh2_channel_wait_eof.3 \
	libssh2_channel_wait_closed.3 \
	libssh2_channel_write_ex.3 \
	libssh2_channel_x11_req_ex.3 \
	libssh2_hostkey_hash.3 \
	libssh2_scp_recv.3 \
	libssh2_scp_send_ex.3 \
	libssh2_session_abstract.3 \
	libssh2_session_block_directions.3 \
	libssh2_session_callback_set.3 \
	libssh2_session_free.3 \
	libssh2_session_disconnect_ex.3 \
	libssh2_session_init.3 \
	libssh2_session_last_errno.3 \
	libssh2_session_last_error.3 \
	libssh2_session_method_pref.3 \
	libssh2_session_methods.3 \
	libssh2_session_set_blocking.3 \
	libssh2_session_startup.3 \
	libssh2_poll.3 \
	libssh2_poll_channel_read.3 \
	libssh2_sftp_close_handle.3 \
	libssh2_sftp_fstat_ex.3 \
	libssh2_sftp_last_error.3 \
	libssh2_sftp_init.3 \
	libssh2_sftp_open_ex.3 \
	libssh2_sftp_mkdir_ex.3 \
	libssh2_sftp_read.3 \
	libssh2_sftp_readdir.3 \
	libssh2_sftp_rename_ex.3 \
	libssh2_sftp_rmdir_ex.3 \
	libssh2_sftp_seek.3 \
	libssh2_sftp_shutdown.3 \
	libssh2_sftp_stat_ex.3 \
	libssh2_sftp_symlink_ex.3 \
	libssh2_sftp_tell.3 \
	libssh2_sftp_tell64.3 \
	libssh2_sftp_unlink_ex.3 \
	libssh2_sftp_write.3 \
	libssh2_userauth_authenticated.3 \
	libssh2_userauth_keyboard_interactive_ex.3 \
	libssh2_userauth_list.3 \
	libssh2_userauth_password_ex.3 \
	libssh2_userauth_publickey_fromfile.3 \
	libssh2_base64_decode.3 \
	libssh2_trace.3
